--- a/css/index.css
+++ b/css/index.css
@@ -24,6 +24,10 @@ iframe {
     text-shadow: 2px 2px 3px rgba(0, 0, 0, 0.2)
 }
 
+.header-shadow {
+    text-shadow: 2px 2px 3px rgba(0, 0, 0, 0.6)
+}
+
 .content-reviews {
     background-color: #f8f8f8
 }
